linked to privacy policy and legal notice

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="signup-container hidden" id="signUpContainer">
-            <img onclick="logIn()" src="./img/Vector.png" alt="" class="arrow-back">
+            <img onclick="logIn()" src="./img/Vector.png" alt="" class="arrow-back-start">
             <h1>Sign up</h1>
             <div class="separator"></div>
 
@@ -89,8 +89,8 @@
         </div>
 
         <div class="terms">
-            <a href="#" class="terms-link">Privacy Policy</a>
-            <a href="#" class="terms-link">Legal Notice</a>
+            <a href="./html/legal matters/privacypolicy.html" class="terms-link">Privacy Policy</a>
+            <a href="./html/legal matters/legalnotice.html" class="terms-link">Legal Notice</a>
         </div>
     </div>    
 
