links to header and sidebar templates added

--- a/html/help.html
+++ b/html/help.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/img/JoinIcon.png">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/templates/header.css">
-    <script src="/templates/header.js"></script>
+    <link rel="stylesheet" href="/templates/header_and_sidebar.css">
+    <script src="/templates/header_and_sidebar_script.js"></script>
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="/templates/header.html"></div>
