--- a/addTask/add_task.html
+++ b/addTask/add_task.html
@@ -70,7 +70,7 @@
                     </div>
                     <div id="substasks-container" class="flex-column">
                         <span class="subtitle">Subtasks</span>
-                        <input type="text" id="choose-subtasks" placeholder="Add new subtask" required />
+                        <input type="text" id="choose-subtasks" placeholder="Add new subtask" required Ö />
                     </div>
                 </div>
                 <div id="required-container">
