added html templates for header and sidebar

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/join_logo.png">
+    <link rel="icon" href="../img/summary/join_logo_summary.png">
     <title>JOIN - Summary User</title>
-    <link rel="stylesheet" href="../css/summary_user.css">
+    <link rel="stylesheet" type="text/css" href="../css/summary_user.css">
+    <link rel="stylesheet" type="text/css" href="../header_and_sidebar/header_and_sidebar.css">
     <script src="../js/summary_user.js"></script>
+    <script src="../header_and_sidebar/header_and_sidebar_script.js"></script>   
 </head>
 
 <body onload="init()">
 
-    <div includeHTML="../nav/nav.html"></div>
+    <div includeHTML="../header_and_sidebar/sidebar.html"></div>
 
     <div id="right">
 
-        <div includeHTML="../header/header.html"></div>
+        <div includeHTML="../header_and_sidebar/header.html"></div>
 
         <section id="main">
             <div id="mainTitle">
