linked to utils.js

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
 
                 <div class="log-in-btn-container">
-                    <button type="submit" class="btn-log-in">Log in</button>
-                    <button class="btn-guest-log-in">Guest Log in</button>
+                    <button type="submit" class="btn-log-in btn-log-in-small">Log in</button>
+                    <button class="btn-guest-log-in btn-guest-log-in-medium">Guest Log in</button>
                 </div>              
             </form>
         </div>
@@ -94,6 +94,7 @@
         </div>
     </div>    
 
+    <script src="/js/utils.js"></script>
     <script src="script.js"></script>    
 </body>
 </html>
