--- a/addTask/add_task.html
+++ b/addTask/add_task.html
@@ -12,7 +12,7 @@
     <body>
         <div includeHTML="../../header_and_sidebar/header_and_sidebar.html"></div>
         <h1>Add Task</h1>
-        <div id="content-box-container">
+        <formÖ id="content-box-container">
             <div style="display: flex">
                 <div id="content-box-left" class="flex-column">
                     <div id="title-container" class="flex-column">
@@ -89,6 +89,6 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </formÖ>
     </body>
 </html>
