trying to fetch only contact names

--- a/addTask/add_task.html
+++ b/addTask/add_task.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Join</title>
+        <link rel="icon" href="/img/JoinIcon.png" />
         <link rel="stylesheet" href="./addTask.css" />
         <link rel="stylesheet" href="/css/fonts.css" />
         <script src="/addTask/addTask.js"></script>
@@ -27,7 +28,7 @@
                         <div class="subtitle">Assigned to</div>
                         <div id="selected-name" class="select-container">
                             Select contacts to assign
-                            <img src="/img/addTask/arrow_drop_down.svg" id="dropdown-arrow" onclick="fetchContacts()" />
+                            <img src="/img/addTask/arrow_drop_down.svg" id="dropdown-arrow" onclick="loadContacts()" />
                         </div>
                     </div>
                 </div>
