first implemantation dropdown

--- a/addTask/add_task.html
+++ b/addTask/add_task.html
@@ -28,8 +28,9 @@
                         <div class="subtitle">Assigned to</div>
                         <div id="selected-name" class="select-container">
                             Select contacts to assign
-                            <img src="/img/addTask/arrow_drop_down.svg" id="dropdown-arrow" onclick="loadContacts()" />
+                            <img src="/img/addTask/arrow_drop_down.svg" id="dropdown-arrow" onclick="fetchContacts()" />
                         </div>
+                        <div id="dropdown-list"></div>
                     </div>
                 </div>
                 <div id="border-container"></div>
