--- a/header_and_sidebar.html
+++ b/header_and_sidebar.html
@@ -8,8 +8,8 @@
     <script src="./header_and_sidebar_script.js"></script>
 </head>
 <body>
-
-    <header>
+<!-- <div>das ist ein test</div> -->
+    <header>   
         <div class="headerContent">
             <div class="headerLogoMobile">
                 <a href="">
