--- a/board/board.html
+++ b/board/board.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Board</title>
     <link rel="stylesheet" href="./board.css">
     <link rel="stylesheet" href="./header_and_sidebar.css">
     <script src="./header_and_sidebar_script.js"></script>
