--- a/board/board.html
+++ b/board/board.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="renderBoard()">
 
-    <header>
+    <header>   
         <div class="headerContent">
             <div class="headerLogoMobile">
                 <a href="">
@@ -21,7 +21,7 @@
             <span class="headerSpan">Kanban Project Management Tool</span>
             <div class="helpAndUserProfile">
                 <div class="helpDiv">
-                    <a href="help.html"><img src="./assets/icons/help.png" alt=""></a>
+                    <a href="/html/help.html"><img src="./assets/icons/help.png" alt=""></a>
                 </div>
                 <div class="userProfile">G</div>
             </div>
@@ -33,10 +33,10 @@
 
 
 <div class="sideBarMenu">
-    <a href="#" id="summary" class="sideBarMenuButtons"><img src="./assets/icons/summaryIcon.png" alt=""> Summary</a>
-    <a href="#" id="addTask" class="sideBarMenuButtons"><img src="./assets/icons/edit_square.png" alt=""> Add Task</a>
-    <a href="#" id="board" class="sideBarMenuButtons"><img src="./assets/icons/boardIcon.png" alt=""> Board</a>
-    <a href="#" id="contacts" class="sideBarMenuButtons"><img src="./assets/icons/contactsIcon.png" alt=""> Contacts</a>
+    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="./assets/icons/summaryIcon.png" alt=""> Summary</a>
+    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="./assets/icons/edit_square.png" alt=""> Add Task</a>
+    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="./assets/icons/boardIcon.png" alt=""> Board</a>
+    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="./assets/icons/contactsIcon.png" alt=""> Contacts</a>
 </div>
 
 <div class="sideBarPolicyAndNotice">
