--- a/addTask/add_task.html
+++ b/addTask/add_task.html
@@ -24,7 +24,7 @@
                 <span class="headerSpan">Kanban Project Management Tool</span>
                 <div class="helpAndUserProfile">
                     <div class="helpDiv">
-                        <a href="help.html"><img src="./assets/icons/help.png" alt=""></a>
+                        <a href="/html/help.html"><img src="./assets/icons/help.png" alt=""></a>
                     </div>
                     <div class="userProfile">G</div>
                 </div>
