--- a/summary/summary_user.html
+++ b/summary/summary_user.html
@@ -9,12 +9,50 @@
     <link rel="stylesheet" href="summary_user.css">
     <link rel="stylesheet" href="../header/header.css">
     <link rel="stylesheet" href="../nav/nav.css">
+    <link rel="stylesheet" href="/css/header_and_sidebar.css">
     <script src="summary_user.js"></script>
     <script src="../header/header.js"></script>
     <script src="../nav/nav.js"></script>
+    <script src="./hover_effekt_summary.js"></script>
 </head>
 
 <body onload="init()">
+
+    <header>   
+        <div class="headerContent">
+            <div class="headerLogoMobile">
+                <a href="">
+                    <img src="./assets/icons/headerLogoMobile.png" alt="">
+                </a>
+            </div>
+            <span class="headerSpan">Kanban Project Management Tool</span>
+            <div class="helpAndUserProfile">
+                <div class="helpDiv">
+                    <a href="/html/help.html"><img src="./assets/icons/help.png" alt=""></a>
+                </div>
+                <div class="userProfile">G</div>
+            </div>
+        </div>
+    </header>
+
+<div class="sideBar">
+    <div class="imgWrapper"><img src="./assets/icons/logo.svg" alt=""></div>
+
+
+<div class="sideBarMenu">
+    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="./assets/icons/summaryIcon.png" alt=""> Summary</a>
+    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="./assets/icons/edit_square.png" alt=""> Add Task</a>
+    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="./assets/icons/boardIcon.png" alt=""> Board</a>
+    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="./assets/icons/contactsIcon.png" alt=""> Contacts</a>
+</div>
+
+<div class="sideBarPolicyAndNotice">
+    <a href="#" id="privacyPolicy" class="policyHref">Privacy Policy</a>
+    <a href="#" id="legalNotice" class="noticeHref">Legal notice</a>
+
+</div>
+
+</div>
    
     <div includeHTML="../nav/nav.html"></div>
 
