--- a/summary/summary_user.html
+++ b/summary/summary_user.html
@@ -36,14 +36,14 @@
     </header>
 
 <div class="sideBar">
-    <div class="imgWrapper"><img src="./assets/icons/logo.svg" alt=""></div>
+    <div class="imgWrapper"><img src="/assets/icons/logo.svg" alt=""></div>
 
 
 <div class="sideBarMenu">
-    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="./assets/icons/summaryIcon.png" alt=""> Summary</a>
-    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="./assets/icons/edit_square.png" alt=""> Add Task</a>
-    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="./assets/icons/boardIcon.png" alt=""> Board</a>
-    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="./assets/icons/contactsIcon.png" alt=""> Contacts</a>
+    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="/assets/icons/summaryIcon.png" alt=""> Summary</a>
+    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="/assets/icons/edit_square.png" alt=""> Add Task</a>
+    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="/assets/icons/boardIcon.png" alt=""> Board</a>
+    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="/assets/icons/contactsIcon.png" alt=""> Contacts</a>
 </div>
 
 <div class="sideBarPolicyAndNotice">
