--- a/html/contacts.html
+++ b/html/contacts.html
@@ -17,13 +17,13 @@
         <div class="headerContent">
             <div class="headerLogoMobile">
                 <a href="">
-                    <img src="./assets/icons/headerLogoMobile.png" alt="">
+                    <img src="/assets/icons/headerLogoMobile.png" alt="">
                 </a>
             </div>
             <span class="headerSpan">Kanban Project Management Tool</span>
             <div class="helpAndUserProfile">
                 <div class="helpDiv">
-                    <a href="/html/help.html"><img src="./assets/icons/help.png" alt=""></a>
+                    <a href="/html/help.html"><img src="/assets/icons/help.png" alt=""></a>
                 </div>
                 <div class="userProfile">G</div>
             </div>
@@ -31,14 +31,14 @@
     </header>
 
 <div class="sideBar">
-    <div class="imgWrapper"><img src="./assets/icons/logo.svg" alt=""></div>
+    <div class="imgWrapper"><img src="/assets/icons/logo.svg" alt=""></div>
 
 
 <div class="sideBarMenu">
-    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="./assets/icons/summaryIcon.png" alt=""> Summary</a>
-    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="./assets/icons/edit_square.png" alt=""> Add Task</a>
-    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="./assets/icons/boardIcon.png" alt=""> Board</a>
-    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="./assets/icons/contactsIcon.png" alt=""> Contacts</a>
+    <a href="/summary/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="/assets/icons/summaryIcon.png" alt=""> Summary</a>
+    <a href="/addTask/add_task.html" id="addTask" class="sideBarMenuButtons"><img src="/assets/icons/edit_square.png" alt=""> Add Task</a>
+    <a href="/board/board.html" id="board" class="sideBarMenuButtons"><img src="/assets/icons/boardIcon.png" alt=""> Board</a>
+    <a href="/html/contacts.html" id="contacts" class="sideBarMenuButtons"><img src="/assets/icons/contactsIcon.png" alt=""> Contacts</a>
 </div>
 
 <div class="sideBarPolicyAndNotice">
