--- a/board/board.html
+++ b/board/board.html
@@ -41,9 +41,8 @@
 </div>
 
 <div class="sideBarPolicyAndNotice">
-    <a href="#" id="privacyPolicy" class="policyHref">Privacy Policy</a>
-    <a href="#" id="legalNotice" class="noticeHref">Legal notice</a>
-
+    <a href="/html/legal matters/privacypolicy.html" id="privacyPolicy" class="policyHref">Privacy Policy</a>
+    <a href="/html/legal matters/legalnotice.html" id="legalNotice" class="noticeHref">Legal notice</a>
 </div>
 
 </div>
