--- a/html/legal matters/privacypolicy.html
+++ b/html/legal matters/privacypolicy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/header_and_sidebar.css">
-    <script src="/templates/header_and_sidebar_script"></script>
+    <script src="./hover_effekt_privacypolicy.js"></script>
     <script src="/script.js"></script>
 </head>
 <body onload="includeHTML()">
@@ -44,6 +44,8 @@
 <div class="sideBarPolicyAndNotice">
     <a href="/html/legal matters/privacypolicy.html" id="privacyPolicy" class="policyHref">Privacy Policy</a>
     <a href="/html/legal matters/legalnotice.html" id="legalNotice" class="noticeHref">Legal notice</a>
+</div>
+
 </div>
 
     <div class="header-legal">
