added button links to board.html; added local storage query

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -32,18 +32,18 @@
             <div id="mainContentContainer">
                 <div id="mainContent">
                     <div id="mainContentLine1">
-                        <div id="toDo" class="mainContentLinePart transformRight">
+                        <a href="../board/board.html" id="toDo" class="mainContentLinePart transformRight">
                             <div class="mainContentLine1Circle">
                                 <img id="edit" src="../img/summary/edit.png" alt="Edit Icon">
                             </div>
-                            <div class="mainContentLineText">
-                                <div id="userToDoAmount"> </div>                                                    <!-- HTML-Template --> 
-                                <div>
-                                    <span class="mainContentLineTextBottom">To-do</span>
+                                <div class="mainContentLineText">
+                                    <div id="userToDoAmount"> </div>                                                    <!-- HTML-Template --> 
+                                    <div>
+                                        <span class="mainContentLineTextBottom">To-do</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div id="done" class="mainContentLinePart transformLeft">
+                        </a>
+                        <a href="../board/board.html" id="done" class="mainContentLinePart transformLeft">
                             <div class="mainContentLine1Circle">
                                 <img id="check" src="../img/summary/check.png" alt="Checked Icon">
                             </div>
@@ -53,9 +53,9 @@
                                     <span class="mainContentLineTextBottom">Done</span>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                    <div id="mainContentLine2" class="transformBottomRight">
+                    <a href="../board/board.html" id="mainContentLine2" class="transformBottomRight">
                         <div id="mainContentLinePartLeft">
                             <div id="createPriorityLogoAndColor"> </div>                                            <!-- HTML-Template -->
                             <div class="mainContentLineText">
@@ -67,20 +67,20 @@
                             <div id="deadline"> </div>                                                              <!-- HTML-Template -->
                             <span id="upcoming">Upcoming Deadline</span>
                         </div>
-                    </div>
+                    </a>
                     <div id="mainContentLine3">
-                        <div class="mainContentLine3Part transformRight">
+                        <a href="../board/board.html" class="mainContentLine3Part transformRight">
                             <div id="tasksInBoard"> </div>                                                          <!-- HTML-Template -->
                             <span class="mainContentLine3Text">Tasks <br> in Board</span>
-                        </div>
-                        <div class="mainContentLine3Part transformCenter">
+                        </a>
+                        <a href="../board/board.html" class="mainContentLine3Part transformCenter">
                             <div id="tasksInProgress"> </div>                                                       <!-- HTML-Template -->
                             <span class="mainContentLine3Text">Tasks in <br> Progress</span>
-                        </div>
-                        <div class="mainContentLine3Part transformLeft">
+                        </a>
+                        <a href="../board/board.html" class="mainContentLine3Part transformLeft">
                             <div id="tasksInFeedback"> </div>                                                       <!-- HTML-Template -->
                             <span class="mainContentLine3Text">Awaiting <br> Feedback</span>
-                        </div>
+                        </a>
                     </div>
                 </div>
 
