added firebase queries for summary statistics

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="../css/header_and_sidebar.css">
     <script src="../js/summary_user.js"></script>
     <script src="../js/header_and_sidebar_script.js"></script>   
-
 </head>
 
 <body onload="init()">
@@ -37,9 +36,9 @@
                                 <img id="edit" src="../img/summary/edit.png" alt="Edit Icon">
                             </div>
                                 <div class="mainContentLineText">
-                                    <div id="userToDoAmount"> </div>                                                    <!-- HTML-Template --> 
+                                    <div id="userToDoAmount"> </div>                                                <!-- HTML-Template --> 
                                     <div>
-                                        <span class="mainContentLineTextBottom">To-do</span>
+                                        <span id="textToDo" class="mainContentLineTextBottom">To-do</span>
                                     </div>
                                 </div>
                         </a>
@@ -50,7 +49,7 @@
                             <div class="mainContentLineText">
                                 <div id="userDoneAmount"> </div>                                                    <!-- HTML-Template --> 
                                 <div>
-                                    <span class="mainContentLineTextBottom">Done</span>
+                                    <span id="textDone" class="mainContentLineTextBottom">Done</span>
                                 </div>
                             </div>
                         </a>
