added time dependent greeting and mobile responsiveness

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -25,6 +25,7 @@
                 </div>
                 <div id="mainTitleRight">
                     <span>Key Metrics at a Glance</span>
+                    <div id="responsiveUnderline"></div>
                 </div>
             </div>
             
