added new div container for mobile greeting

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -16,6 +16,8 @@
 
     <div includeHTML="../html/header_and_sidebar.html"></div>
 
+    <div id="greetingMobile"> </div>
+
     <div id="right">
 
         <section id="main">
