added session check and logout functionality

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../css/summary_user.css">
     <link rel="stylesheet" type="text/css" href="../css/header_and_sidebar.css">
     <script src="../js/summary_user.js"></script>
+    <script src="../js/logout.js"></script>
     <script src="../js/header_and_sidebar_script.js"></script>   
 </head>
 
@@ -19,6 +20,9 @@
     <div id="greetingMobile"> </div>
 
     <div id="right">
+        <div id="logout">
+            <button onclick="logout()">LOGOUT</button>
+        </div>
 
         <section id="main">
             <div id="mainTitle">
