--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" href="../css/summary_user.css">
     <link rel="stylesheet" type="text/css" href="../css/header_and_sidebar.css">
     <script src="../js/summary_user.js"></script>
+    <script src="../js/summary_guest.js"></script>
+    <script src="../js/summary_stats_design.js"></script>
+    <script src="../js/summary_greeting.js"></script>
+    <script src="../js/summary_html_templates.js"></script>
     <script src="../js/logout.js"></script>
     <script src="../js/header_and_sidebar_script.js"></script>   
 </head>
