added summary_init.js and summary_date.js to shorten summary_user.js

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -13,6 +13,8 @@
     <script src="../js/summary_stats_design.js"></script>
     <script src="../js/summary_greeting.js"></script>
     <script src="../js/summary_html_templates.js"></script>
+    <script src="../js/summary_date.js"></script>
+    <script src="../js/summary_init.js"></script>
     <script src="../js/logout.js"></script>
     <script src="../js/header_and_sidebar_script.js"></script>   
 </head>
