--- a/html/add_task.html
+++ b/html/add_task.html
@@ -118,6 +118,12 @@
                     </button>
                 </div>
             </div>
+            <div id="success-message-container" class="style-effects-success-message-container">
+                <div id="success-message" class="hidden-overlay">
+                    <p>Task added to board</p>
+                    <img src="/img/addTask/Icons.png" alt="success" />
+                </div>
+            </div>
         </form>
     </body>
 </html>
